--- a/assets/css/quick-website.css
+++ b/assets/css/quick-website.css
@@ -16638,7 +16638,7 @@ button.bg-black:focus
 
 .fill-section-secondary
 {
-    fill: #fafbfe !important;
+    fill: white !important;
 }
 
 .stroke-section-secondary
